Fix spacing regresion for h1 tag

--- a/app/assets/stylesheets/site/application.css.less
+++ b/app/assets/stylesheets/site/application.css.less
@@ -21,19 +21,21 @@ body {
     padding-bottom: 25px; }
 
 h1, h2 {
-  text-align: center;
-  background-color: @white; }
+    text-align: center;
+    background-color: @white; }
 
 h1 {
-  background-image: image-url('brand.png');
-  background-repeat: no-repeat;
-  background-position: center center;
-  height: 130px;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  span {
-    display: none; } }
+    background-image: image-url('brand.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 130px;
+    text-transform: uppercase;
+    span {
+      display: none; } }
+
+h2 {
+    margin-bottom: 20px;
+    margin-top: 20px; }
 
 .birdies {
     background-image: image-url('birds.png');
